--- a/src/index.css
+++ b/src/index.css
@@ -63,8 +63,10 @@
     --dark-mode-bg-secondary-color: #3f3f3f;
     --dark-mode-text-secondary-color: var(--grey-300);
   
-    --background-color: var(--grey-50);
-    --text-color: var(--grey-900);
+    --background-color:#28243D;
     --background-secondary-color: #F4F5FA;
-    --text-secondary-color: var(--grey-500);
+    --text-color: #D5D1EA;
+    --text-secondary-color: var(--grey-900);
+    --background-box-color: #312D4B;
+    --background-secondary-box-color: white;
   }
